# maxpanel

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-0253620a3993c94be0c0fadfd32ae96ae7bcf7330fa32acf6985e1584fdc7207.json  query-0404e8f6bb86dcab7df5c9c82246f02e92fb8b120ea6b1e71128ca76a6c9e7c8.json  query-09777dabdec423d0ab294c6752dfd0acabbd1b5f2f217b3a3b1f510d60c865a4.json  query-0a3d76f589931e13aa67690809cb0f2378bdfecd1adcc11b6d8caf09d0645c01.json  query-0b8427a2e74be969b46246a815d30f49c4ca3c820cd19795dccefeb5cf8f2472.json  query-0f04227b50daa74614bbf9572ca893db47da2b7c7aa340c1e028e5f5190bf1ce.json  query-1389126d95809e345466ee068aa47f5c20fc06d10876cc4efe9600e1ef43dd45.json  query-14ce265b7c151931cd18622255e45f483e1561767eeb2a70c463c853fe8796f4.json  query-1f138c8addc96dc24c5c9f6eb3e30158fc55f9533a43b236cbad0159b3047241.json  query-35c6176cdcbcb2e585be36433863050d62b81582ed9e5e368b67fc9fded35160.json  query-39ad1df7582120b3fd0b985635fd6de204596dc3c21c5645e2354fb1cf5294a1.json  query-476c825437be3dcacbe3fd880af94763f6c5e572fac927159c22449ee66e274b.json  query-4890a5826dbe39d566d31dcedabc242e5e81c817dbbce5c44ae8be16cf7d5b16.json  query-4e82544f5529ba6283d49dcc728ec8d7469679703fdabded1cd9b8697e435d1c.json  query-507c0dd53e084e2a19685483afcd1f76c0fb5af4d235e98d34b7011e75614723.json  query-5327466c1eba4fe47a9763e3361ca694da50b82813fd2192e7a57f99680517a9.json  query-540ae324456c2a80d34b7d35a50abcaa1dcc8e4f16e46cf384e05e60329281a5.json  (+44 more)
(+165 files in other folders)
